--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -7,9 +7,9 @@
 
   POLITICS_Smedley_Butler_Exile_DESC:0 "§YBorn:§! 30/7/1881\n\n§YSmedley Butler§! is failed man with a failed dream. With the defeat of the American-Jacobin Revolution Butler and his disciples marched west into untamed America in hopes of a new life. The result was the death of many and those who were the "lucky" bunch soon found out why the settlers of the old America failed in their ambitions. Whilst their greatest foe is the Commonwealth, second ranks nature and her desire to elevate the human struggle to the rest of the animal kingdom.\n\nNow begins the greatest test of all, to see what it truely takes to break a man, and an idea.\n\n§RSic semper tyrannis§! is a Latin phrase meaning "thus always to tyrants". It suggests that bad outcomes should or eventually will befall tyrants, and that shall be out motto."
 
-  POLITICS_Jock_Garden_DESC:0 ""
+  POLITICS_Jock_Garden_DESC:0 "§YBorn:§! 13/8/1882\n\nRadical, pragmatist, Scotsman: the three words to describe §YJock Garden§!, leader of the Federative Union faction within the Jacobin enclave in North America. A well traveled man, Garden has lived all over the commonwealth and his experience has formed his unique blend of radical Jacobinism with moderate progressive policies. A strong orator and a committed socialist, he is a force to be reckoned with. However, there are rumors of him being an opportunist and somewhat of a sellout. Despite these poisoned words he remains the only true democratic figure and day by day more see him as the only stable man in an §Runstable world.§!"
   
-  POLITICS_Oliver_Law_DESC:0 ""
+  POLITICS_Oliver_Law_DESC:0 "§YBorn:§! 23/10/1900\n\nSome men spend their lives doing one thing. For §YOliver Law§!, that was fighting. Whether it was organizing for racial justice or labour laws, eventually the young American picked up a gun to fight for the liberation of the working class. Once a protégé of Butler, Law has become one of his fiercest critics arguing more needs to be done to preserve the SCA’s radical tradition and build the better world the young Jacobins were promised.\n\nA veteran of the Iberian campaign has given Mr Law a unique outlook on life, wherever there is power, there is tyranny, and the only way to destroy such a thing is by taking its potential to the untapped extreme. §RFight fire with fire.§!"
   
   ##########################
   # MINISTERS
