--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -296,6 +296,10 @@
   PBNews.74.d:0 ""
   PBNews.74.a:0 "The Young Have Replaced The Old"
 
+  PBNews.75.t:0 "BOUHLER COMMITS SUICIDE"
+  PBNews.75.d:0 ""
+  PBNews.75.a:0 "Dear Lord"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
