--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -77,6 +77,7 @@
   PB_ENG_Support_Hardliners:0 "The Party of General Haig"
   PB_ENG_Support_Hardliners_desc:0 "Haig was a true son of the British Empire and all what she stood for. Haig lead our armies during the Great War and his premiership as Prime Minister greatly stabilised the shell shocked Empire after the War. His ancient values shall become the new doctrine of the British people; values based on Crown, class and order."
   PB_ENG_Challenge_Monopolies:0 "Challenge the Imperial Monopolies"
+  PB_ENG_Challenge_Monopolies_desc:0 "The British Empire was founded on the acquisition of wealth, it was only natural that monopolies would take hold on these goods overtime. However we cannot allow this to continue, the inefficiency causes by these monopolies cannot continue; we shall break these rings of control and fully utilize the resources for the betterment of Britain."
   PB_ENG_Impose_Tariffs:0 "Impose Tariffs on Foreign Imports"
   PB_ENG_Establish_Work_Programs:0 "Off the Streets and into the Workshop"
   PB_ENG_Anti_Monopoly_Act:0 "Exorcising the Robber Barons"
