--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -293,7 +293,7 @@
   PBNews.73.a:0 "The People take their fate with firm hands."
 
   PBNews.74.t:0 "GREATER PRUSSIA PROCLAIMED!"
-  PBNews.74.d:0 ""
+  PBNews.74.d:0 "The unthinkable has happened. The Prussian state, once considered to be nothing more than a clique of Germanic militant fanatics, has managed to crush their oldest and gravest rival, the Germans, and has proclaimed Greater Prussia in its place. Ambitions which had once made Prussia nothing more than a laughingstock have now been realized, and the world awaits with bated breath to see what will happen next."
   PBNews.74.a:0 "The Young Have Replaced The Old"
 
   PBNews.75.t:0 "BOUHLER COMMITS SUICIDE"
