--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -79,11 +79,17 @@
   PB_ENG_Challenge_Monopolies:0 "Challenge the Imperial Monopolies"
   PB_ENG_Challenge_Monopolies_desc:0 "The British Empire was founded on the acquisition of wealth, it was only natural that monopolies would take hold on these goods overtime. However we cannot allow this to continue, the inefficiency causes by these monopolies cannot continue; we shall break these rings of control and fully utilize the resources for the betterment of Britain."
   PB_ENG_Impose_Tariffs:0 "Impose Tariffs on Foreign Imports"
+  PB_ENG_Impose_Tariffs_desc:0 "British industry has been suffering due to the fact that cheap foreign goods have been flooding the British market. To counter this and save jobs during these times the government shall enact tariffs on foreign goods to help British industry and encourage Britons to buy British goods."
   PB_ENG_Establish_Work_Programs:0 "Off the Streets and into the Workshop"
+  PB_ENG_Establish_Work_Programs_desc:0 "The economic crash has caused many Briton's to lose both their jobs and their homes forcing many of our citizens onto the streets. To fix this embarrassment the government shall open work houses to provide food, shelter and work to these homeless citizens. Although unpopular such draconian times require drastic measures."
   PB_ENG_Anti_Monopoly_Act:0 "Exorcising the Robber Barons"
+  PB_ENG_Anti_Monopoly_Act_desc:0 "Although the Empire was founded on free trade many merchantmen families have monopolies on imperial goods passed down from father to son. The problem is that these goods could help out the British economy but their selfish desire to monopolise these goods have forced our hand to purge these robber baron's even though it goes against our character of government."
   PB_ENG_Concessions_to_Whigs:0 "Concessions to the Whigs"
+  PB_ENG_Concessions_to_Whigs_desc:0 "The Whig party is as old as the Tory party itself which also helped found the parliamentary democracy we have today. The Whigs even though left leaning have many moderates who tow the same line as and therefore we shall come to certain agreements not based on party politics but based on the betterment of Britain, even if it does ruffle a few feathers with the old guard."
   PB_ENG_Concessions_to_Socialists:0 "Concessions to the Socialists"
+  PB_ENG_Concessions_to_Socialists_desc:0 "The Socialists seem to be the villain against our heroic Tory party however times have changed. With this economic downturn we must do as much as possible to help our citizen's and surprisingly the WUP and other Socialists seem to have good ideas which we could implement. However to do this we must offer concessions to the WUP which will obviously anger many High Tories."
   PB_ENG_A_Populist_Party:0 "Forging a New Legacy for the Party"
+  PB_ENG_A_Populist_Party_desc:0 "The Conservative party remains the oldest and greatest political party in the world.With these new trying times we shall forge a legacy which shall forever leave the name of the Tory party in the eon's of history for we shall create a new Britain to last the test of time."
   PB_ENG_Impose_Austerity:0 "Austerity Measures"
   PB_ENG_Privatization_Campaign:0 "Bail Outs and Privatizations"
   PB_ENG_Lean_on_Colonies:0 "You scratch our back..."
