--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -91,10 +91,15 @@
   PB_ENG_A_Populist_Party:0 "Forging a New Legacy for the Party"
   PB_ENG_A_Populist_Party_desc:0 "The Conservative party remains the oldest and greatest political party in the world.With these new trying times we shall forge a legacy which shall forever leave the name of the Tory party in the eon's of history for we shall create a new Britain to last the test of time."
   PB_ENG_Impose_Austerity:0 "Austerity Measures"
+  PB_ENG_Impose_Austerity_desc:0 "For the first time in British history we shall fully impose austerity to deal with the current economic crisis. Although unpopular which will force many jobs to be lost in Britain we must cut down on our current expenditure down so that we prevent the Pound Stirling from crashing any further then it has already done for it is our duty to do so even if it hurts us on the inside."
   PB_ENG_Privatization_Campaign:0 "Bail Outs and Privatizations"
+  PB_ENG_Privatization_Campaign_desc:0 "Britain as famously quoted is a nation of shopkeepers and businesses and so a majority of our economy relies on these services to continue running. However with the economic crash many businesses both big and small have gone into decline. We shall graciously bail out these firms to prevent any more economic damage whilst also privatising failing national industries to cut any dead weight in the economy off."
   PB_ENG_Lean_on_Colonies:0 "You scratch our back..."
+  PB_ENG_Lean_on_Colonies_desc:0 "Before we had Haig we had Joseph Chamberlain; a true advocate of Empire and prophet of a centralised Imperial Preference system. Now as the heir of his legacy we shall call upon the colonial governments to force them to trade their natural resources to us for the betterment of Empire of course."
   PB_ENG_Support_Colonies:0 "...we'll scratch yours"
+  PB_ENG_Support_Colonies_desc:0 "Now that our colonies rightfully helped us out in these dark times we are not so ungrateful to not help them out as well; we are all Gentlemen after all. We shall compensate the colonies with gratitude to put all affairs into order."
   PB_ENG_Veterans_Pensions:0 "Expand Veteran's Pensions"
+  PB_ENG_Veterans_Pensions_desc:0 "Haig was the Field Marshal of the British Empire and as such he loves all his troops under him. Haig however was shocked by the treatment of our veterans who give themselves all they could offer and a bit more after that. To fix this blight on our history we shall expand the veteran pension scheme to provide housing and more finicial assitance for all of our boys who came out that dreaded war."
   PB_ENG_Socialist_Crackdown:0 "A New Tricolor Scare"
   PB_ENG_Haigs_Shadow:0 "Forever in the Haig's Shadow"
 
