Finished Conservative true

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -101,7 +101,9 @@
   PB_ENG_Veterans_Pensions:0 "Expand Veteran's Pensions"
   PB_ENG_Veterans_Pensions_desc:0 "Haig was the Field Marshal of the British Empire and as such he loves all his troops under him. Haig however was shocked by the treatment of our veterans who give themselves all they could offer and a bit more after that. To fix this blight on our history we shall expand the veteran pension scheme to provide housing and more finicial assitance for all of our boys who came out that dreaded war."
   PB_ENG_Socialist_Crackdown:0 "A New Tricolor Scare"
+  PB_ENG_Socialist_Crackdown_desc:0 "The French have always been our worst enemy from the Hundred years war to the Great War. Now they have installed themselves complete revanchists hell bent on the destruction of Britain and all which we value. We must warn our citizens of this menace for the showdown which will decide the fate of Britain will be against the French filth"
   PB_ENG_Haigs_Shadow:0 "Forever in the Haig's Shadow"
+  PB_ENG_Haigs_Shadow_desc:0 "Haig was the true son of the British Empire; Field Marshal, Prime Minister, Father figure for the entire federation. Now we immortalise him in our politics for we all walk under his immortal shadow as the heir's of his legacy. We shall transform Britannia into Imperial Paradise Haig has always imagined through his policy as the true High Tory party which we are."
 
   PB_ENG_WUP_Victory:0 "A Worker's Union Victory"
   PB_ENG_WUP_Victory_desc:0 "For the first time in British and Imperial history the Worker's Union Party (known as the WUP) has won the General election. The party of the working class has captured the heart of Empire. However old party grievances  are already coming to light between the moderate Clement Atlee and the radical Harry Pollitt with what seems to be more then party leadership at state but rather the course of Britain herself."
