--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -129,6 +129,23 @@
   SCA_Core_Sante_Fe:0 "Core Sante Fe"
   SCA_Invade_Sante_Fe:0 "Invade Sante Fe"
 
+  PB_SCA_Contacts_In_The_Commonwealth:0 "Contacts In The Commonwealth"
+  PB_SCA_Contacts_In_The_Commonwealth_desc:0 "Butler's history of being an important military figure in the Commonwealth has given him connections to individuals with alot of power, and alot of resources. A few shady deals shall secure an effective pipeline network in all major American cities, which will then host as operating points to incite Jacobin rebellions."
+  SCA_Raid_Chicago:0 "Destabilize Chicago"
+  SCA_Raid_Detroit:0 "Destabilize Detroit"
+  SCA_Raid_Boston:0 "Destabilize Boston"
+  SCA_Raid_New_York:0 "Destabilize New York"
+  SCA_Raid_Philadelphia:0 "Destabilize Philadelphia"
+
+  PB_SCA_Stabilization_Campaigns:0 "Stabilization Campaigns"
+  SCA_Stabilize_Northbasin:0 "Stabilize Northbasin"
+  SCA_Stabilize_Crow:0 "Stabilize Crow"
+  SCA_Stabilize_Arapaho:0 "Stabilize Arapaho"
+  SCA_Stabilize_Rockafeller:0 "Stabilize Rockafeller"
+  SCA_Stabilize_Freedonia:0 "Stabilize Freedonia"
+  SCA_Stabilize_Blackfoot:0 "Stabilize Blackfoot"
+  SCA_Stabilize_Assinibone:0 "Stabilize Assinibone"
+
   ##########################
   # OPINION MODIFIERS
   ##########################
@@ -333,6 +350,12 @@
 
   SCA_Air_Doctrines:0 "Air Doctrines"
   SCA_Air_Doctrines_desc:0 ""
+
+  SCA_Share_Military_Knowledge:0 "Share Military Knowledge"
+  SCA_Share_Military_Knowledge_desc:0 ""
+   
+  SCA_Assassinate_Mr_Oliver:0 "Assassinate Mr Oliver"
+  SCA_Assassinate_Mr_Oliver_desc:0 ""
 
   # Mid-Western Union
 
@@ -541,7 +564,7 @@
   SCA4tooltip:0 "§RWe Must Protect Our Freedoms!§!"
   SCA5tooltip:0 "§YWith the stolen horses out our disposal we will mobolize a small cavalry brigade.§!"
   SCA6tooltip:0 "§RThe blood we spilt, the sacrifices we made, the dead we buried. All toiled for the nation, their children, the revolutionary cause. With the initial hurdles out of the way we must begin claiming what is rightfully ours.\n\nLong Live The Revolution!§!"
-  SCA7tooltip:0 "The §YSecond Continental Army§! will be known as the §YMid-Western Union§!"
+  SCA7tooltip:0 "The §YSecond Continental Army§! will be known as the §YMid-Western Union§!\n\nThe Mid-Western tree will now be unlocked"
   SCA8tooltip:0 "\n§YA professional army will be raised and the current militias will be demobilized, ultmiately replaced in due time. The militias will not take kindly to this gesture.§!"
   SCA9tooltip:0 "\n§YWe will allow the militias to remain the de-facto source of our nations defence. This will cause some minor long term administration issues but will be benefitial for our dire situation short term.§!"
   SCA10tooltip:0 "§RThe militias will roam wild and free.§!"
@@ -556,8 +579,10 @@
   SCA19tooltip:0 "The vial pigs in California parade around with red banners and revolutionary zeal. A clear showing of their incompetence and stupidity. They are fools! Liars! And most disturbingly traitors to the true revolution! They are but a simple bump in our path to the Commonwealth, to our home. Their fate will be bloody and merciless.\n\nYour §OPreparedness§! for war with California is at §Y[?SCA_Prep_Cal]%§!\n\nOnce your §OPreparedness§! has reached §Y100%§! the "All Is Set" Focus will unlock."
   SCA20tooltip:0 "Your §OPreparedness§! is at §G100%§!" 
   SCA21tooltip:0 "Your §OPreparedness§! will increase by §Y10%§!"
-  SCA22tooltip:0 "The §YMid-Western Union§! will be known as the §YPacific Union§!"
-
+  SCA22tooltip:0 "The §YMid-Western Union§! will be known as the §YPacific Union§!\n\nThe Pacific Union tree will now be unlocked"
+  SCA23tooltip:0 "Our hardest days are over but the stuggle has yet to end."
+  SCA24tooltip:0 "You will be locked out of destabilizing another city until this decision times out"
+  SCA25tooltip:0 "\nWith these decisions you will be able to §Rdestabilize§! the Commonwealth until our eventual showdown"
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
   SCA_LAK_WAR_OVER:0 "The Northern Threat Has Been Dealt With"
@@ -566,6 +591,7 @@
   PB_SCA_Peoples_Vanguard:0 "Has Picked The People's Vanguard"
   PB_SCA_Young_Continental_Army:0 "Has Picked The Young Continental Army"
   PB_SCA_Federative_Union:0 "Has Picked The Federative Union"
+  SCA_Already_Destabilizing_State:0 "Aleady Destabilizing A Major City"
 
   PB_Mid_Western_Union:0 "Mid-Western Union"
 
@@ -589,8 +615,6 @@
   SCA_The_Federative_Union_JC:0 "Federative Union"  
   SCA_The_Federative_Union_SS_Long:0 "The Federative Union - Socialist"
   SCA_The_Federative_Union_SS:0 "Federative Union"
-
-  
   
   ##########################
   # EVENTS
@@ -693,6 +717,12 @@
   SCA28title:0 "California Burns"
   SCA28desc:0 "" 
   SCA28opta:0 "Now We March East"
+  SCA29title:0 "The Next Steps"
+  SCA29desc:0 "" 
+  SCA29opta:0 "Do Not Rest Easy"
+  SCA30title:0 "Jacobin Unrest"
+  SCA30desc:0 "" 
+  SCA30opta:0 "Hunt Down These Thugs"
 
 
 
