SCA Naval Tree Framework

--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -553,6 +553,30 @@
 
   SCA_Emergency_Mobilization:0 "Emergency Mobilization"
   SCA_Emergency_Mobilization_desc:0 ""
+  
+  SCA_A_Red_Navy:0 "A Red Navy"
+  SCA_A_Red_Navy_desc:0 ""
+
+  SCA_Expand_Ship_Building_Capabilities:0 "Expand Ship Building Capabilities"
+  SCA_Expand_Ship_Building_Capabilities_desc:0 ""
+
+  SCA_Naval_War_Games:0 "Naval War Games"
+  SCA_Naval_War_Games_desc:0 ""
+
+  SCA_Ship_Blueprints:0 "Ship Blueprints"
+  SCA_Ship_Blueprints_desc:0 ""
+
+  SCA_Reign_In_The_Dreadnoughts:0 "Reign In The Dreadnoughts"
+  SCA_Reign_In_The_Dreadnoughts_desc:0 ""
+
+  SCA_Begin_A_Build_Up:0 "Begin A Build Up"
+  SCA_Begin_A_Build_Up_desc:0 ""
+
+  SCA_Purchase_Japanese_Ships:0 "Purchase Japanese Ships"
+  SCA_Purchase_Japanese_Ships_desc:0 ""
+
+  SCA_A_Friend_Across_The_Pacific:0 "A Friend Across The Pacific"
+  SCA_A_Friend_Across_The_Pacific_desc:0 ""
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
