--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -300,6 +300,10 @@
   PBNews.75.d:0 ""
   PBNews.75.a:0 "Dear Lord"
 
+  PBNews.76.t:0 "THE DEAD MARCH WEST"
+  PBNews.76.d:0 ""
+  PBNews.76.a:0 "The Struggle Has Just begun"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
