this is a bug fix, it has many bug fixes

--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -96,7 +96,7 @@
   PB_TUR_Economic_Collapse_desc:0 "The Ottoman economy has been in a state of near total collapse for years, thanks in part to the global economic downturn and the mismanagement of the Arab revolt. Foreign investment is nonexistent, and very few can afford anything beyond the most basic necessities"
   PB_TUR_Caliph_of_Islam:0 "The Caliph of Islam"
   PB_TUR_Caliph_of_Islam_desc:0 "Despite a myriad of social, economic and political problems, the Ottoman Caliph still remains the de-facto head of the Islamic faith. This legitimacy is one of the few sinews holding Turkish society together, however the Ottoman loss of the Islamic holy sites in Arabia was a massive blow to the religious legitimacy of the Caliph. It is not uncommon for many Muslims abroad to look to Istanbul for guidance, but many have begun to turn their attention towards those who hold Mecca, the Arabians."
-  TUR_five_year_plan_preperation_idea:0 "Five Year Plan Prepeation"
+  TUR_five_year_plan_preperation_idea:0 "Five Year Plan Preparation"
   TUR_five_year_plan_idea:0 "The Turkish Five Year Plan"
   TUR_restored_peace_idea:0 "Restored Peace"
 
