--- a/localisation/PB_Free_Tribes_l_english.yml
+++ b/localisation/PB_Free_Tribes_l_english.yml
@@ -21,3 +21,9 @@
   ##########################
   # EVENTS
   ##########################
+
+  ##########################
+  # LEADERS
+  ##########################
+
+  POLITICS_Otetiani_DESC:0 "§YBorn:§!03/06/1891\n\n§YOtetiani§! is a native born American with a troubled past. Holding a western education and originating from the Cherokee tribe has given Otetiani an unqiue outlook on politics and American life. Being a veteran of the Iberian campaign and Native-American national figure head has granted him the power and respect many chieftains before him lacked.\n\nThough an outsider may say that this nation stands as an untapped paradise the truth is unbearable to hear. Tribal rivalries run thick, cultural issues prevent social change, and corruption reigns supreme. And the westerners know this. With the Confederacy being fresh blood to the world stage many look to the nation and wonder what it has planned for the future. Wether it will crumble and fall like all those that came before, or if it will triumph in the face of tyranny as a mecca of Native-American peoples. Only time can tell.\n\n§RWe remain as the only independent Native nation on American soil and though our homes are gone, our future, bleak, and the struggle only worsening, we must endure, as the alternative is far worse.§!"
