--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -52,6 +52,10 @@
 
   PB_SCA_The_Red_Horde:0 "The Red Horde"
 
+  PB_SCA_A_Red_Navy:0 "A Red Navy"
+
+  PB_SCA_Naval_Build_Up:0 "Naval Build Up"
+
   ##########################
   # DECISIONS/MISSIONS/DEBUG
   ##########################
@@ -587,7 +591,7 @@
   SCA3tooltip:0 "§YOne Militia Will Be Raised§!"
   SCA4tooltip:0 "§RWe Must Protect Our Freedoms!§!"
   SCA5tooltip:0 "§YWith the stolen horses out our disposal we will mobolize a small cavalry brigade.§!"
-  SCA6tooltip:0 "§RThe blood we spilt, the sacrifices we made, the dead we buried. All toiled for the nation, their children, the revolutionary cause. With the initial hurdles out of the way we must begin claiming what is rightfully ours.\n\nLong Live The Revolution!§!"
+  SCA6tooltip:0 "\n§RThe blood we spilt, the sacrifices we made, the dead we buried. All toiled for the nation, their children, the revolutionary cause. With the initial hurdles out of the way we must begin claiming what is rightfully ours.\n\nLong Live The Revolution!§!"
   SCA7tooltip:0 "The §YSecond Continental Army§! will be known as the §YMid-Western Union§!\n\nThe Mid-Western tree will now be unlocked"
   SCA8tooltip:0 "\n§YA professional army will be raised and the current militias will be demobilized, ultmiately replaced in due time. The militias will not take kindly to this gesture.§!"
   SCA9tooltip:0 "\n§YWe will allow the militias to remain the de-facto source of our nations defence. This will cause some minor long term administration issues but will be benefitial for our dire situation short term.§!"
@@ -603,10 +607,12 @@
   SCA19tooltip:0 "The vial pigs in California parade around with red banners and revolutionary zeal. A clear showing of their incompetence and stupidity. They are fools! Liars! And most disturbingly traitors to the true revolution! They are but a simple bump in our path to the Commonwealth, to our home. Their fate will be bloody and merciless.\n\nYour §OPreparedness§! for war with California is at §Y[?SCA_Prep_Cal]%§!\n\nOnce your §OPreparedness§! has reached §Y100%§! the "All Is Set" Focus will unlock."
   SCA20tooltip:0 "Your §OPreparedness§! is at §G100%§!" 
   SCA21tooltip:0 "Your §OPreparedness§! will increase by §Y10%§!"
-  SCA22tooltip:0 "The §YMid-Western Union§! will be known as the §YPacific Union§!\n\nThe Pacific Union tree will now be unlocked"
+  SCA22tooltip:0 "The §YMid-Western Union§! will be known as the §YPacific Union§!\n\nYou will now have the ability to wage §YWar§! against the §RCommonwealth§!"
   SCA23tooltip:0 "Our hardest days are over but the stuggle has yet to end."
   SCA24tooltip:0 "You will be locked out of destabilizing another city until this decision times out"
   SCA25tooltip:0 "\nWith these decisions you will be able to §Rdestabilize§! the Commonwealth until our eventual showdown"
+  SCA26tooltip:0 "§GThree dockyards will be built in any two random owned coastal states§!"
+  SCA27tooltip:0 "Six §YJapanese§! Destroyers will be §GDonated§! to us from the port in Tokyo.\n\nThe Ships will be renamed to:\n§YSSS§! Liberty\n§YSSS§! Freedom\n§YSSS§! Justice\n§YSSS§! Butler\n§YSSS§! Columbia\n§YSSS§! Revenge"
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
   SCA_LAK_WAR_OVER:0 "The Northern Threat Has Been Dealt With"
@@ -747,6 +753,9 @@
   SCA30title:0 "Jacobin Unrest"
   SCA30desc:0 "" 
   SCA30opta:0 "Hunt Down These Thugs"
+  SCA31title:0 "A Friend Across The Pacific"
+  SCA31desc:0 "" 
+  SCA31opta:0 "We Welcome Our American Friends"
 
 
 
