--- a/localisation/PB_peace_popup_l_english.yml
+++ b/localisation/PB_peace_popup_l_english.yml
@@ -74,6 +74,9 @@
  PB_PEACE_POPUP_FLAVOR_XSM_CivWar_Victory:0 "The Bakuninist revolution dies as quickly as it began"
  PB_PEACE_POPUP_FLAVOR_FTR_CivWar_Victory:0 "Red banners fly from the Tibetan Plateau to Qinghai"
 
+ PB_PEACE_POPUP_FLAVOR_SCA_Victory:0 "The North American Continent is painted a little more red"
+ PB_PEACE_POPUP_FLAVOR_SCA_Loss:0 "The American "Utopia" lives no more"
+
  PB_PEACE_POPUP_FLAVOR_WT_Low:0 "The Long Peace begins to crumble"
  PB_PEACE_POPUP_FLAVOR_WT_Mod:0 "The Drums of War grow louder"
  PB_PEACE_POPUP_FLAVOR_WT_High:0 "Peace is now but a fleeting memory"
