--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -301,8 +301,8 @@
   PBNews.75.a:0 "Dear Lord"
 
   PBNews.76.t:0 "THE DEAD MARCH WEST"
-  PBNews.76.d:0 ""
-  PBNews.76.a:0 "The Struggle Has Just begun"
+  PBNews.76.d:0 "Shocking revelations have come from the western hemisphere from the  Commonwealth of America that a large migration westwards has occurred as what seems to be a Revolutionary Great Trek. Reports say that many aspects of Jacobin loyalists and socialists have decided to join this 'Great march west' to establish what they call a progressive Utopia of America and to spread this continent across the continent. Ironically many subjects of the Commonwealth call this trek the 'Dead March West' due to the fact that many leftist marchers have been heckled and cut down from a lack of logistics, supplies and military incursions."
+  PBNews.76.a:0 "Vae Victa"
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
