--- a/localisation/parliament_gui_l_english.yml
+++ b/localisation/parliament_gui_l_english.yml
@@ -3,8 +3,8 @@
  # All credit goes to the amazing Flaxbeard. Without his free to use GUI I would be in the corner of my bedroom having Vietnam flashbacks.
  
  # Decisions
-  parliament_gui_decision_category:0 "United Commonwealth Congress"
-  parliament_gui_decision_category_desc:0 "The Constitution of the United Dominions of America was established January 2nd, 1780, in Philadelphia. Modeled on the constitution of the United Kingdom, the Dominion’s constitution establishes a national parliament between the various colonies within, while allowing them to retain local parliaments. MIPs are elected to the Imperial Parliament in London from each Dominion within the UDA. This is where the American Commonwealth Congress was born."
+  parliament_gui_decision_category:0 "United Commonwealth Parliament"
+  parliament_gui_decision_category_desc:0 "The Constitution of the United Dominions of America was established January 2nd, 1780, in Philadelphia. Modeled on the constitution of the United Kingdom, the Dominion’s constitution establishes a national parliament between the various colonies within, while allowing them to retain local parliaments. MIPs are elected to the Imperial Parliament in London from each Dominion within the UDA. This is where the American Commonwealth Parliament was born."
 
  # Scripted GUIs
   semicircle_parliament_gui_title:0 "The Senate And House"
