--- a/localisation/PB_United_Commonwealth_l_english.yml
+++ b/localisation/PB_United_Commonwealth_l_english.yml
@@ -44,23 +44,30 @@ AME_libtard_new_dawn_over_philly:0 "New Economic Resurgence"
 ##########################
 
 # Tooltips
-AME_PAR1tooltip:0 "[GetParliamentPartyName] has greater than §Y50§! seats"
 AME_PAR2tooltip:0 "§RPartisan Gridlock preventing said motion passing§!"
-AME_PAR3tooltip:0 "§GSaid motion succeeding in Congress§!"
-AME_PAR4tooltip:0 "Congress will be unable to review any further acts until they are done with their current examination process\n"
-AME_PAR5tooltip:0 "Congress will once again be able to review any future acts"
+AME_PAR3tooltip:0 "§GSaid motion succeeding in Parliament§!"
+AME_PAR4tooltip:0 "Parliament will be unable to review any further acts until they are done with their current examination process\n"
+AME_PAR5tooltip:0 "Parliament will once again be able to review any future acts"
 
 # Flags
-AME_ACT_IN_MOTION:0 "An Act Is Currently In Motion"
-AME_Congress_Is_In_Recess:0 "Congress Is In Recess"
+AME_ACT_IN_MOTION:0 "An Act Is Currently In Motion Or Parliament Is In Recess"
+AME_Congress_Is_In_Recess:0 "Parliament Is In Recess"
 
 # Decisions
-AME_Congress_Recess:0 "Congress Is In Recess"
-AME_Congress_Recess_desc:0 "Due to the administrative strain of change and reform, Congress must be given some time to focuse on smaller, and rather more petty matters before once again reviewing any major acts. Though this period is relatively short so progress will arrive quickly in time."
+AME_Congress_Recess:0 "Parliament Is In Recess"
+AME_Congress_Recess_desc:0 "\nDue to the administrative strain of change and reform, Parliament must be given some time to focus on smaller, and rather more petty matters before once again reviewing any major acts. Though this period is relatively short so progress will arrive quickly in time."
 AME_Veterans_Act:0 "Veterans Protection Act (VPA)"
 AME_Veterans_Act_desc:0 "\nVeterans Protection Act (§YVPA§!): This act will safeguard those that sacrificed so much for this country. They, afterall, are the spartans of 'American Idealism'. The vanguards of peace and prosperity. And most importantly, our sons, brothers, and fathers. Through ration handouts and economic aid will we be able to get these men back up onto their feet. So they can once again provide for this great nation."
 AME_Farmer_Relief_Package:0 "Farmer Relief Package (FRP)"
 AME_Farmer_Relief_Package_desc:0 "\nFarmer Relief Package (§YFRP§!): With the "Great Western Dustbowl" damaging much of our crop monopolies the need to assist our farmers is of the utmost importance. Lest me all starve to death. Britian has offered economic aid to help with the situation so its only a matter of dedicating the funds to the right people. Of course there are those who'd rather see their competition sink into the ground and rot."
+AME_Native_Reconigition_Decree:0 "Native Reconigition Decree (NRD)"
+AME_Native_Reconigition_Decree_desc:0 "\nNative Reconigition Decree (§YNRD§!): An official reconigition of the Native American people's will go a long way in preserving future stability, and hopefully, address the damaging border raids we currently experience by minor tribes out west. Of course this won't end racism but it will be a small step in the right direction."
+AME_American_Fishing_Zone:0 "American Fishing Zone (AFZ)"
+AME_American_Fishing_Zone_desc:0 "\nAmerican Fishing Zone (§YAFZ§!): Extending our already established fishing zones from 2 nautical miles to 4 will greatly assist in the growing fishing industry, especially around the maratime areas situated near Nova Scotia. This will also better allow us to police our Oceanic borders."
+AME_Transportation_Act:0 "Transportation Act (TA)"
+AME_Transportation_Act_desc:0 "\nTransportation Act (§YTA§!): With railroads and public trams playing a large role in the movement of modern society in would be foolish of us to not evolve our laws. Benefits and encouragements for the usage of such things should be a large prioty for state governments to focus on."
+AME_Cites_Development_Plan:0 "Cites Development Plan (CDP)"
+AME_Cites_Development_Plan_desc:0 "\nCites Development Plan (§YCDP§!): If we are to produce a society that works and provides then the sure fire way to achieve such a thing is by building, buidling roads, homes, and pits. Wherever needs digging we shall provide the shovel. All we ask for in return is a steady supply of ready and eager hands to do so."
 
 # Events
 AME_Parliament1title:0 "Motion Fails"
@@ -74,6 +81,22 @@ AME_Parliament2opta:0 "Fantastic"
 AME_Parliament3title:0 "Farmer Relief Package"
 AME_Parliament3desc:0 "" 
 AME_Parliament3opta:0 "Fantastic"
+
+AME_Parliament4title:0 "Native Reconigition Decree"
+AME_Parliament4desc:0 "" 
+AME_Parliament4opta:0 "Fantastic"
+
+AME_Parliament5title:0 "American Fishing Zone"
+AME_Parliament5desc:0 "" 
+AME_Parliament5opta:0 "Fantastic"
+
+AME_Parliament6title:0 "Transportation Act"
+AME_Parliament6desc:0 "" 
+AME_Parliament6opta:0 "Fantastic"
+
+AME_Parliament7title:0 "Cites Development Plan"
+AME_Parliament7desc:0 "" 
+AME_Parliament7opta:0 "Fantastic"
 
 ##########################
 # EVENTS
