--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -141,9 +141,13 @@
   PB_ENG_WUP_Politt_Consolidated_desc:0 "Don't worry comrades, we will break the capitalist system which oppresses the proletariat of Britannia. We shall break your chains and liberate you as long as you only listen, obey and heed the Command of Comrade Politt." 
 
   PB_ENG_NPP_Victory:0 "A National People's Victory"
+  PB_ENG_NPP_Victory_desc:0 "The National People's People party was set up in the interwar years during the first years after the Great War. Many veterans and patriots returned to a country that within years became completely unrecognisable which to some was completely unacceptable with many of these veterans banding together to create the NPP. Now the NPP which was seen as nothing more then a fringe party has won the election Britannia shall truly be transformed to what it deserves."
   PB_ENG_Paralyze_Socialists:0 "Paralyze the Socialist Menace"
+  PB_ENG_Paralyze_Socialists_desc:0 "The Socialists, the true foe of Britain and the Empire. Whilst we died in the Trenches; they were giving our jobs to the Niggers and the Pakis. Whilst we returned from Iberia, the socialists were then saying that we should pay for healthcare for a generation that don't care about us. Now that we're in power we shall make a few house calls to the left wing scum and their support base to show what spineless cowards they are."
   PB_ENG_Patriotic_Propaganda:0 "Patriotic Propaganda"
+  PB_ENG_Patriotic_Propaganda_desc:0 "The new generation have lost their way and heritage due to the Worker's Party telling them to give up the idealistic stories of the Empire and embrace the scourge known as Socialism. We shall remind them as it is our duty of governance that there is no shame in being proud of Nelson, Wellington and Rhodes through propaganda. May they know the true glory of Empire through the Great White Mother."
   PB_ENG_Police_Militarization:0 "The Police Armaments Act"
+  PB_ENG_Police_Militarization_desc:0 "Crime has been growing due to economic woe and criminal Jacobin activity against our government. To rectify it we shall follow in the steps of the American Commonwealth and give arms to the Bobby's to make sure they secure Law and Order alongside our rule."
   PB_ENG_Mental_Hygiene_Act:0 "The Mental Hygiene Act"
   PB_ENG_Fund_Blackshirts:0 "Losing Some Paperwork"
   PB_ENG_New_British_Man:0 "Promote the New British Man"
@@ -153,6 +157,7 @@
   PB_ENG_English_Chauvinism:0 "English Chauvinism"
   PB_ENG_Expose_Socialist_Plot:0 "Expose the True Socialist Plot!"
   PB_ENG_National_Security_Act:0 "The National Security Act"
+  PB_ENG_National_Security_Act_desc:0 "The NPP have brought peace, freedom, justice, and security to the United Kingdom and all of her mandates. To fully make sure of this we shall pass the National Security for good measure. God save Britannia."
 
   PB_ENG_Kings_Agenda:0 "The King's Agenda"
   PB_ENG_Ruled_Britannia:0 "Ruled Britannia"
