--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -150,15 +150,23 @@
   PB_ENG_Police_Militarization:0 "The Police Armaments Act"
   PB_ENG_Police_Militarization_desc:0 "Crime has been growing due to economic woe and criminal Jacobin activity against our government. To rectify it we shall follow in the steps of the American Commonwealth and give arms to the Bobby's to make sure they secure Law and Order alongside our rule."
   PB_ENG_Mental_Hygiene_Act:0 "The Mental Hygiene Act"
+  PB_ENG_Mental_Hygiene_Act_desc:0 "The British government now shall finally pass further legislation for those who are considered mentally ill to treated and retrained for our new Anglo society. This has come to pass after investigations by the government has seen that those who are considered Jacobin's or hardcore socialists are now mentally ill. We shall pass the Mental Hygiene act to contain and help these 'poor souls' who have been manipulated by Jacobin elements."
   PB_ENG_Fund_Blackshirts:0 "Losing Some Paperwork"
+  PB_ENG_Fund_Blackshirts_desc:0 "The Blackshirt's are our protectors at our rallies and bodyguard's to our MP's and other officials. With our party securing power in Downing Street it is only natural that we secure arms for our Blackshirt's for 'protection'. All we have to do is to lose some paperwork and do some adjust some quartermaster papers and pooof now we have the arms for our Blackshirt's whilst no one else except ourselves know what's going on." 
+  
   PB_ENG_New_British_Man:0 "Promote the New British Man"
+  PB_ENG_New_British_Man_desc:0 "After the Great War the British man lost his touch in society. With economic depressions and an uncaring state the idea of manhood slowly lost it's ideals in this new distorted British society. Now the NPP Government must step in and promote a 'new British Man'. The new British man shall be encouraged to be physically fit, a natural father and the head of the household whilst also pushing himself to be like the imperial heroes of old."
   PB_ENG_Build_Support_Base:0 "Build up our Urban Support Base"
+  PB_ENG_Build_Support_Base_desc:0 "Our main supporters come from the country side and towns of Britain where the citizens there are culturally conservative and have always been. To win full public support we will have to begin rallying support in the more urban areas such as the East End of London where the working class are the main chaps there. This will be a difficult challenge to do as most of these proud British men are part of the WUP however we must secure the popular mandate if we have any chance for our plans to work."
   PB_ENG_Promote_Imperial_Economics:0 "Promote Imperial Economics"
+  PB_ENG_Promote_Imperial_Economics_desc:0 "In this world, one thing counts, in the Bank large amounts. However expansion from the Empire have seen that much of the profits from the early days of expansion are now being wasted on investments to areas of the Empire where the fucking savages don't work. To remedy this we shall take the money back and a bit more and invest it on the deserving white Dominions where we can actually make a difference and then maybe give a little back to these ungrateful savages. Sometimes you got to steal from a Nigger or Two."
   PB_ENG_Blackshirt_Deployments:0 "Blackshirt Deployments"
+  PB_ENG_Blackshirt_Deployments_desc:0 "Rowdy areas which seem hostile to our rule and areas where the local NPP units need help have seen the party start deploying Blackshirt's as a show of force and a boost of morale for overwhelmed Blackshirt units. These men are former military men who are willing to die for the cause and Britain so let the socialist menace fear our wrath if they do engage with these men especially if we have guns and they don't." 
   PB_ENG_English_Chauvinism:0 "English Chauvinism"
+  PB_ENG_English_Chauvinism_desc:0 "The Anglo and his fellow celtic brothers built this world and we should be damned proud to do so. From now on let the cross of St George fly in every street in Britain, from now on let the school kids know what we have done for this world and why we are the imperial shining light saving the savages from themselves. Let no man be ashamed to say I am an Englishman for being English is to win the lottery of life. God save our sacred isles and let those traitors who are ashamed to be English go to hell for their treasonous thoughts."
   PB_ENG_Expose_Socialist_Plot:0 "Expose the True Socialist Plot!"
   PB_ENG_National_Security_Act:0 "The National Security Act"
-  PB_ENG_National_Security_Act_desc:0 "The NPP have brought peace, freedom, justice, and security to the United Kingdom and all of her mandates. To fully make sure of this we shall pass the National Security for good measure. God save Britannia."
+  PB_ENG_National_Security_Act_desc:0 "The NPP have brought peace, freedom, justice, and security to the United Kingdom and all of her mandates. To fully make sure of this we shall create the National Security Act which will give the Prime Minister powers to bypass parliament in emergency times' all for good measure of course. God save Britannia."
 
   PB_ENG_1937_Elections:0 "The 1937 Election"
   PB_ENG_1937_Elections_WUP:0 "Keeping the Red Flag Flying Here"
@@ -183,7 +191,7 @@
   PB_ENG_1937_Emergency_Wartime_Provisions:0 "Emergency Wartime Provisions"
   PB_ENG_1937_Wartime_Necessities:0 "Expanding the Workforce"
   PB_ENG_1937_Wartime_Rationing:0 "Institute Rationing"
-  PB_ENG_1937_Arsenal_of_Democracy:0 "The Arsenal of Democracy"
+  PB_ENG_1937_Arsenal_of_Democracy:0 "The Arsenal of Empire"
   PB_ENG_1937_Minority_Autonomy:0 "Necessities for Imperial Unity"
 
   PB_ENG_1937_Elections_NPP:0 "Britain Lives, and Marches on"
@@ -631,7 +639,7 @@
   # DECISIONS
   ##########################
   PB_ENG_Domestic_and_Foreign_Policies:0 "Matters of the State"
-  PB_ENG_Domestic_and_Foreign_Policies_desc:0 "\n\n\n\n\n\nAs the preeminent global power, Britain has numerous domestic and foreign policy responsibilities. Regardless of the political situation of the nation, these responsibilities must be handled. Britain has numerous concerns across the planet and on the continent, and with the tides of the world shifting towards war once again, we must do what we can to safeguard our interests."
+  PB_ENG_Domestic_and_Foreign_Policies_desc:0 "\n\n\n\n\n\nAs The preeminent global power, Britain has numerous domestic and foreign policy responsibilities. Regardless of the political situation of the nation, these responsibilities must be handled. Britain has numerous concerns across the planet and on the continent, and with the tides of the world shifting towards war once again, we must do what we can to safeguard our interests."
   PB_Operation_Plantagenet:0 "[FRA.GetFlag] §YOperation Plantagenet§!"
   PB_Operation_Plantagenet_desc:0 "With France on the warpath once again, it is our duty to attempt to keep the peace in Europe. Left unattended for too long, France may subjugate the Germans and establish themselves as the preeminent continental power and become an existential threat to our interests. We must intervene to save not just ourselves, but the whole of Europe from the day of the jackboot."
   PB_Operation_Cromwell:0 "[ICA.GetFlag] §YOperation Cromwell§!"
