--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -308,6 +308,10 @@
   PBNews.77.d:0 ""
   PBNews.77.a:0 "Concerning"
 
+  PBNews.78.t:0 "PRUSSIAN SUPER-BATTLESHIP"
+  PBNews.78.d:0 ""
+  PBNews.78.a:0 "Concerning"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
