Prussian Naval OOB and Stuff

--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -306,7 +306,7 @@
   PRS_flag_stick_to_our_roots:0 "We have decided to stick with our roots"
   PRS_flag_go_with_the_steel_beasts:0 "We have focused on mechanized warfare"
   prussia45tooltip:0 "\n§ROur final days are ahead of us§!"
-  prussia46tooltip:0 "\n§YWith defeat seeming all but inevitable some political ministers and military officials have suggested that Bouhler use suicide pills before the approaching armies make it to the capital. A quick and painless death unlike what the Imperial powers would offer to Der Berator. Though Maximilian Wenger is the official named successor for the time being Gerd Von Rundstedt will assume total control until the invaders are pushed out and a peace treaty signed, if that is even a possible outcome at this point.§!\n\nDoing so will result in a massive loss in stability and war support!"
+  prussia46tooltip:0 "\n§YWith defeat seeming all but inevitable some political ministers and military officials have suggested that Bouhler use suicide pills before the approaching armies make it to the capital. A quick and painless death unlike what the Imperial powers would offer to Der Berator. Werner Lorenz will assume total control until the invaders are pushed out and a peace treaty signed, if that is even a possible outcome at this point.§!\n\nDoing so will result in a massive loss in stability and war support!"
   prussia47tooltip:0 "\nBy granting some concessions to a military figure we shall gain some inside knowledge on Schmidt."
   
   PRS_NI_Nationale_Revitalisierungspartei_Long:0 "Nationale Revitalisierungspartei"
@@ -381,11 +381,11 @@
   prussia13optc:0 "Go With Manteuffel"
 
   prussia14title:0 "Issues Of Culture"
-  prussia14desc:0 "" 
+  prussia14desc:0 "The fatherland is a mixed breed of peoples, from the Slavs and Germans, to the small ethnic Lithuania and Jewish minorities, every colour imaginable seems to have has painted this young nation. Yet unity comes at a price, the ever increasing Russian population, forced by the empire after the semi-successful war of independence has been a political and ethical burden on the state. The Poles have to become an issue due to their proximity to Prussia, making thise whole issue an utter mess to deal with. Cooperation will certainly aid with the war effort but will surely bring about issues in the long run, but there is always an alternative." 
   prussia14opta:0 "Time To Act"
 
   prussia15title:0 "Issues Of The Military"
-  prussia15desc:0 "" 
+  prussia15desc:0 "Prussia has always been and always will be a militaristic state with a history of war. Though they were recently wiped from the maps of the world they have returned like a pheonix from the ashes. Once again catching the eyes of the global powers and once again preparing itself for war. Every citizen shall be seen as a solider, and every solider a cog in the war machine that makes the state function. One giant fucking mechanism, in which the German dogs shall witness its beauty and efficiency." 
   prussia15opta:0 "Time To Act"
 
   prussia16title:0 "Issues Of The State"
@@ -412,12 +412,12 @@
   prussia20optc:0 "The Imperial Prussian Flag"
 
   prussia21title:0 "The Next Steps"
-  prussia21desc:0 "Bouhler negotiated his way to the podium where eager crowds awaited him. "Citizens of Prussia, warriors of Teuton, our finest days are ahead of us. Where our spirit will be tested to great lengths. This will be no easy fight, sacrifices will need to be made. But the future, your children, your husbands and wives, family and friends. All will toil for the state. And when our grandest mission is over I promise Prussia will be united and safe against any threat. External And Internal. Long Live Prussia!" " 
+  prussia21desc:0 "Bouhler negotiated his way to the podium where eager crowds awaited him. "Citizens of Prussia, warriors of Teuton, our finest days are ahead of us. Where our spirit will be tested to great lengths. This will be no easy fight, sacrifices will need to be made. But the future, your children, your husbands and wives, family and friends. All will toil for the state. And when our grandest mission is over I promise Prussia will be united and safe against any threat. External And Internal. Long Live Prussia!" And the crowds roared with emotion." 
   prussia21opta:0 "To Purge Dissidence"
 
   prussia22title:0 "Crackdowns In Danzig"
-  prussia22desc:0 "" 
-  prussia22opta:0 "I Thought We Were Prussian?"
+  prussia22desc:0 "Large waves of anti-Polonism have been witnessed by both civilian and local authorities in the major port city of Danzig. Escalated by the governments official stance on the issue, the approach to maintain Prussian ethnic purity. Public beatings are the quickly becoming the new norm and if the situation continues to deteriorate the only likely outcome is a surge in funeral preparations." 
+  prussia22opta:0 "I Thought We Were All Prussian?"
 
   prussia23title:0 "Large Deportation Of Poles"
   prussia23desc:0 "" 
